# barforge-app

./: .release-please-manifest.json  CHANGELOG.md  CLAUDE_PLAN.md  Cargo.toml  Dockerfile.test  ECOSYSTEM.md  README.md  SECURITY.md  release-please-config.json  release-plz.toml
.cargo/: audit.toml
aur/: PKGBUILD
crates/barforge-registry-client/: .openapi-generator-ignore  CHANGELOG.md  Cargo.toml  README.md
crates/barforge-registry-client/.openapi-generator/: FILES
crates/barforge-registry-client/src/apis/: configuration.rs  default_api.rs  mod.rs
crates/barforge-registry-client/src/models/: _api_v1_admin_users__id__verify_post_200_response.rs  _api_v1_auth_sync_post_200_response.rs  _api_v1_categories_get_200_response.rs  _api_v1_collections__id__get_200_response.rs  _api_v1_featured_get_200_response.rs  _api_v1_landing_get_200_response.rs  _api_v1_modules__uuid__get_200_response.rs  _api_v1_modules__uuid__reviews_get_200_response.rs  _api_v1_modules__uuid__screenshots_get_200_response.rs  _api_v1_modules__uuid__star_get_200_response.rs  _api_v1_modules__uuid__versions__version__publish_post_200_response.rs  _api_v1_modules__uuid__versions__version__upload_post_200_response.rs  _api_v1_modules_get_200_response.rs  _api_v1_modules_post_200_response.rs  _api_v1_notifications_preferences_get_200_response.rs  _api_v1_users_me_delete_200_response.rs  _api_v1_users_me_get_200_response.rs  add_module_request.rs  admin_stats.rs  announcement_request.rs  announcement_response.rs  api_v1_admin_stats_get_200_response.rs  api_v1_admin_submissions_get_200_response.rs  api_v1_admin_users_id_verify_post_200_response.rs  api_v1_auth_sync_post_200_response.rs  api_v1_categories_get_200_response.rs  api_v1_collections_get_200_response.rs  api_v1_collections_id_get_200_response.rs  api_v1_collections_post_200_response.rs  api_v1_featured_get_200_response.rs  api_v1_landing_get_200_response.rs  api_v1_modules_get_200_response.rs  api_v1_modules_post_200_response.rs  api_v1_modules_uuid_get_200_response.rs  api_v1_modules_uuid_reviews_get_200_response.rs  api_v1_modules_uuid_screenshots_get_200_response.rs  (+76 more)
(+82 files in other folders)
