[package]
name = "waybar-manager"
version = "0.0.1"
edition = "2024"
description = "GTK4/libadwaita Waybar Extension Manager - browse, install, and configure waybar modules"
license = ""
authors = ["jtaw"]

[[bin]]
name = "waybar-manager-bin"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.10", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_5"] }
glib = "0.21"
gio = "0.21"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.28", features = ["serde", "cst"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

thiserror = "2.0"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[build-dependencies]
glib-build-tools = "0.21"

[profile.release]
lto = true
codegen-units = 1
strip = true
